# Rumoca_SITL

./: Cargo.toml  README.md  sil_config.toml
models/: QuadrotorSIL.mo
src/: bfbs.rs  codec.rs  config.rs  lib.rs  main.rs
tests/: test_input_discontinuity.rs
