[package]
name = "rumoca-sil"
version = "0.1.0"
edition = "2021"
description = "Quadrotor SIL plant simulator using Rumoca"

[dependencies]
rumoca = { path = "/home/micah/Research/development/rumoca/rumoca/crates/rumoca" }
rumoca-sim = { path = "/home/micah/Research/development/rumoca/rumoca/crates/rumoca-sim" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tungstenite = "0.26"
gilrs = "0.11"
crossterm = "0.28"
libc = "0.2"
